welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: illegal start of simple expression
if (estSurBiscuit());
                    ^Balin:7: error: ';' expected but 'else' found.
else { while (!estSurBiscuit());
^